--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,4 @@
 .externalNativeBuild
 .cxx
 local.properties
+client_secret_4310256180-9di5v3ttjk4rcrt539migll3t3qnj87a.apps.googleusercontent.com.json
